@@ -10,10 +10,14 @@ import java.util.ArrayList;
 import javax.swing.event.ChangeEvent;
 import javax.swing.event.ChangeListener;
 
+import edu.colorado.phet.common.phetcommon.simsharing.messages.IUserComponent;
+import edu.colorado.phet.common.phetcommon.simsharing.messages.UserComponent;
+import edu.colorado.phet.common.phetcommon.simsharing.messages.UserComponentChain;
 import edu.colorado.phet.common.phetcommon.util.IntegerRange;
 import edu.colorado.phet.common.phetcommon.view.util.PhetFont;
 import edu.colorado.phet.common.piccolophet.PhetPNode;
 import edu.colorado.phet.reactantsproductsandleftovers.RPALConstants;
+import edu.colorado.phet.reactantsproductsandleftovers.RPALSimSharing.UserComponents;
 import edu.colorado.phet.reactantsproductsandleftovers.RPALStrings;
 import edu.colorado.phet.reactantsproductsandleftovers.RPALSimSharing;
 import edu.colorado.phet.reactantsproductsandleftovers.controls.QuantityValueNode;
@@ -77,7 +81,8 @@ public abstract class AbstractBeforeNode extends PhetPNode implements IDynamicNo
             imageNodeLists.add( new ArrayList<SubstanceImageNode>() );
 
             // one quantity control for each reactant
-            QuantityValueNode quantityNode = new QuantityValueNode( new RPALSimSharing.ReactantSpinner( reactant ), reactant, quantityRange, RPALConstants.HISTOGRAM_IMAGE_SCALE, showSubstanceNames );
+            IUserComponent userComponent = UserComponentChain.chain( UserComponents.reactantSpinner, new UserComponent( reactant.getName() ) );
+            QuantityValueNode quantityNode = new QuantityValueNode( userComponent, reactant, quantityRange, RPALConstants.HISTOGRAM_IMAGE_SCALE, showSubstanceNames );
             quantityNode.setEditable( true );
             addChild( quantityNode );
             reactantValueNodes.add( quantityNode );
