@@ -1,4 +1,5 @@
-1/3/11 #3202, sim-sharing changes related to Swing controls
+2/2/12 #3204, sim-sharing: replace odd user-component classes with enums and chaining
+1/3/12 #3202, sim-sharing changes related to Swing controls
 10/20/11 set game "Start" button color to yellow, to be consistent with "attention" color used through game
 # 1.03.00 (52708) Jun 6, 2011
 6/6/11 > added new translation credits features
